# book-studio

./: .gitignore  CLAUDE.md  README.md
backend/: .gitignore  CLAUDE.md  pyproject.toml
backend/bookstudio/: __init__.py  admin.py  apps.py  conf.py  consumers.py  tasks.py  utils.py
backend/bookstudio/adapters/: base.py  factory.py
backend/bookstudio/api/: urls.py
backend/bookstudio/api/serializers/: ai.py  book.py  export.py  media.py  page.py  panel.py
backend/bookstudio/api/views/: ai.py  ai_stream.py  book.py  export.py  media.py  page.py  panel.py
backend/bookstudio/fixtures/: curated_patterns.json
backend/bookstudio/migrations/: 0001_initial.py  0002_alter_book_updated_at_alter_bookedition_updated_at_and_more.py  0003_design_pattern_models.py  0004_design_pattern_fix_auto_now.py  0005_design_pattern_fix_updated_at.py  0006_ai_session_model.py  0007_design_pattern_target_layout_choices.py  0008_tenant_support.py  0009_fix_tenant_fk_uuid.py  0010_alter_designpattern_category_and_more.py
backend/bookstudio/models/: __init__.py  ai.py  book.py  design_pattern.py  item_bank.py  media.py  media_bank.py  page.py  panel.py  publishing.py
backend/bookstudio/services/: cloning.py  html_export.py  html_import.py  layout.py  page_renderer.py  pattern_applicator.py  pdf_export.py  permissions.py  publishing.py
backend/tests/: conftest.py  middleware.py  mock_llm.py  settings.py  test_ai_pipeline.py  test_api.py  test_design_pattern.py  test_layout.py  test_models.py  test_phase2_remaining.py  test_services.py  test_utils.py  urls.py
docs/: README.md
(+87 files in other folders)
